--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ cmake_minimum_required(VERSION 3.16)
 project(tcpcom)
 
 add_subdirectory(lib)
-add_subdirectory(app)
+add_subdirectory(tcp_server)
+add_subdirectory(tcp_client)
